refactor: trim().isEmpty() 메소드 isBlank()로 변경 (#39)